<resources>
    <string name="app_name">Lab3</string>
    <string name="subtraction_sign">\u2212</string>
    <string name="multiplication_sign">\u00D7</string>
    <string name="addition_sign">\u002B</string>
    <string name="division_sign">\u00F7</string>
    <string name="equals_sign">\u003D</string>
    <string name="hint_number1">first operand</string>
    <string name="hint_number2">second operand</string>
    <string name="default_result">0</string>
    <string name="input_warning">Please input </string>
    <string name="clear_button_text">C</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_history">history</string>
    <string name="clean_history">Clean</string>
    <string name="back_button_text">Go back</string>
</resources>
