<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFragment">


    <Button
        android:id="@+id/clear_history_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/grey"
        android:text="@string/clean_history"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="126dp"
        android:layout_marginStart="126dp"
        android:background="@color/grey"
        android:text="@string/back_button_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/history_content_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/default_result"
        android:textSize="20sp" />


</FrameLayout>